--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-09-24 00:27+0200\n"
+"POT-Creation-Date: 2024-09-24 01:30+0200\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -1085,9 +1085,6 @@ msgstr "Empfänger"
 
 msgid "Do not actually import the newsletter subscribers"
 msgstr "Die Newsletter Abonnenten werden nicht gespeichert"
-
-msgid ": (Address already exists)"
-msgstr ": (Adresse existiert bereits)"
 
 msgid "Will be used as image in the page overview on the parent page"
 msgstr ""
@@ -5498,16 +5495,16 @@ msgid "Exports all newsletter recipients."
 msgstr "Exportiert alle Newsletter Abonnenten."
 
 #, python-format
-msgid "The following line(s) contain invalid data: ${lines}"
-msgstr "Die folgende(n) Zeile(n) enthalten ungültige Daten: ${lines}"
+msgid "Import completed with errors: ${results}"
+msgstr "Import abgeschlossen mit Fehlern: ${results}"
 
 #, python-format
-msgid "${count} newsletter subscribers will be imported"
-msgstr "${count} Abonnenten werden importiert"
+msgid "Import preview: ${result}"
+msgstr "Importvorschau: ${result}"
 
 #, python-format
-msgid "${count} newsletter subscribers imported"
-msgstr "${count} Abonnenten importiert"
+msgid "Import completed: ${result}"
+msgstr "Import abgeschlossen: ${result}"
 
 msgid "The same format as the export (XLSX) can be used for the import."
 msgstr ""
@@ -5531,6 +5528,10 @@ msgstr "Veranstaltungs-Export"
 
 msgid "Exports all future events."
 msgstr "Exportiert alle zukünftigen Veranstaltungen."
+
+#, python-format
+msgid "The following line(s) contain invalid data: ${lines}"
+msgstr "Die folgende(n) Zeile(n) enthalten ungültige Daten: ${lines}"
 
 #, python-format
 msgid "${count} events will be imported"
@@ -6145,115 +6146,3 @@ msgstr "Ein Konto wurde für Sie erstellt"
 
 msgid "The user was created successfully"
 msgstr "Der Benutzer wurde erfolgreich erstellt"
-
-#~ msgid "Directory change rejected"
-#~ msgstr "Verzeichnisänderung abgelehnt"
-
-#~ msgid "Rejection withdrawn."
-#~ msgstr "Ablehnung zurückgezogen."
-
-#~ msgid "Reject"
-#~ msgstr "Abweisen"
-
-#~ msgid "Update your newsletter subscription categories:"
-#~ msgstr "Aktualisieren Sie Ihre Newsletter-Abonnementkategorien:"
-
-#~ msgid "Sign up to our newsletter to always stay up to date:"
-#~ msgstr ""
-#~ "Abonnieren Sie unseren Newsletter um immer auf dem Laufenden zu bleiben:"
-
-#~ msgid "Signup"
-#~ msgstr "Abonnieren"
-
-#, python-format
-#~ msgid ""
-#~ "The date range overlaps with an existing submission window (${range})."
-#~ msgstr ""
-#~ "Der Datumsbereich überschneidet sich mit einem bestehenden "
-#~ "Befragungszeitraum (${range})."
-
-#~ msgid "Phone number"
-#~ msgstr "Telefonnummer"
-
-#~ msgid "A new entry has been added to the \"${directory.title}\" directory:"
-#~ msgstr ""
-#~ "Ein neuer Eintrag wurde im Verzeichnis \"${directory.title}\" hinzugefügt:"
-
-#~ msgid "New entry in directory"
-#~ msgstr "Neuer Eintrag im Verzeichnis"
-
-#~ msgid "has a new entry:"
-#~ msgstr "hat einen neuen Eintrag:"
-
-#, python-format
-#~ msgid ""
-#~ "Registration for notifications on updates in the directory "
-#~ "\"${directory}\""
-#~ msgstr ""
-#~ "Anmeldung für Benachrichtigungen bei Änderungen im Verzeichnis "
-#~ "\"${directory}\""
-
-#, python-format
-#~ msgid "Confirmation for updates in the directory \"${directory}\""
-#~ msgstr "Bestätigung für Änderungen im Verzeichnis \"${directory}\""
-
-#~ msgid ""
-#~ "This is a notification for the new entries in the directory "
-#~ "\"${organisation}\"."
-#~ msgstr ""
-#~ "Dies ist eine Benachrichtigung für neue Einträge im Verzeichnis "
-#~ "\"${organisation}\"."
-
-#~ msgid "The following entry have been added to the directory"
-#~ msgstr "Der folgende Eintrag wurde zum Verzeichnis hinzugefügt"
-
-#~ msgid ""
-#~ "This is a notification for the new entries in \"${organisation}\". If you "
-#~ "no longer wish to receive these notifications, please contact an "
-#~ "administrator so they can remove you from the recipients list."
-#~ msgstr ""
-#~ "Dies ist eine Benachrichtigung über neue Einträge in \"${organisation}\". "
-#~ "Wenn Sie diese Benachrichtigungen nicht mehr erhalten möchten, "
-#~ "kontaktieren Sie bitte einen Administrator, damit er Sie aus der "
-#~ "Empfängerliste entfernen kann."
-
-#, python-format
-#~ msgid "${org} New Entry in ${directory}"
-#~ msgstr "${org} Neuer Eintrag in ${directory}"
-
-#~ msgid "The email adress has been added to the recipients"
-#~ msgstr "Die E-Mail Adresse wurde zu den Empfängern hinzugefügt"
-
-#~ msgid ""
-#~ "This content is automatically deleted when the end date has passed. If no "
-#~ "end date is set, it will be deleted one day after start date."
-#~ msgstr ""
-#~ "Dieser Inhalt wird automatisch gelöscht, wenn das Enddatum überschritten "
-#~ "ist. Wenn kein Enddatum festgelegt ist, wird er einen Tag nach dem "
-#~ "Startdatum gelöscht."
-
-#~ msgid ""
-#~ "There are currently no allowed domains for iframes. To enable domains for "
-#~ "iframes, please contact info@seantis.ch."
-#~ msgstr ""
-#~ "Derzeit sind keine Domains für iframes zugelassen. Um Domains für iframes "
-#~ "zu aktivieren, kontaktieren Sie bitte info@seantis.ch"
-
-#~ msgid ""
-#~ "The height of the iframe in pixels. If not set, the iframe will have a "
-#~ "standard height of 800px."
-#~ msgstr ""
-#~ "Die Höhe des iframe in Pixeln. Wenn nicht festgelegt, wird das iFrame "
-#~ "eine Standardhöhe von 800px haben"
-
-#~ msgid "Display the iframe as a card with a border"
-#~ msgstr "Das iFrame als Card mit einem Rahmen darstellen"
-
-#~ msgid "The following domains are allowed for iframes:"
-#~ msgstr "Die folgenden Domänen sind für iFrames erlaubt:"
-
-#~ msgid "The domain of the URL is not allowed for iframes."
-#~ msgstr "Die Domäne der URL ist für iFrames nicht zulässig."
-
-#~ msgid "Chat with"
-#~ msgstr "Chat mit"
