--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-09-16 11:16+0200\n"
+"POT-Creation-Date: 2024-09-24 09:04+0200\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -596,6 +596,9 @@ msgstr "plus"
 
 msgid "Submit"
 msgstr "Envoyer"
+
+msgid "Select files"
+msgstr "Sélectionner des fichiers"
 
 msgid "Drop files to upload"
 msgstr "Déposez des fichiers pour télécharger"
