--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1,7 +1,7 @@
 # This file was generated from translations.town6.xlsx
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2024-09-16 11:16+0200\n"
+"POT-Creation-Date: 2024-09-24 09:04+0200\n"
 "PO-Revision-Date: 2021-09-27 16:02+0200\n"
 "Language: it_CH\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -591,6 +591,9 @@ msgstr "più"
 
 msgid "Submit"
 msgstr "Invia"
+
+msgid "Select files"
+msgstr "Seleziona i file"
 
 msgid "Drop files to upload"
 msgstr "Trascina e rilascia il file da caricare"
