--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-09-30 10:12+0200\n"
+"POT-Creation-Date: 2024-09-30 10:16+0200\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -4574,9 +4574,11 @@ msgid "Fields"
 msgstr "Felder"
 
 msgid ""
-"Thank you for filling out this survey.<dynamic element> If there's anything "
-"you'd like to change, click on the \"Edit\"-Button below."
+"Thank you for filling out this survey. If there's anything you'd like to "
+"change, click on \"Edit\" below."
 msgstr ""
+"Vielen Dank für Ihre Teilnahme an dieser Umfrage. Falls Sie noch etwas "
+"ändern möchten, klicken Sie auf den \"Bearbeiten\"-Button unten."
 
 msgid "No surveys defined yet."
 msgstr "Es wurden noch keine Umfragen definiert."
