--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-09-30 10:12+0200\n"
+"POT-Creation-Date: 2024-09-30 10:16+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -4583,9 +4583,11 @@ msgid "Fields"
 msgstr "Champs"
 
 msgid ""
-"Thank you for filling out this survey.<dynamic element> If there's anything "
-"you'd like to change, click on the \"Edit\"-Button below."
+"Thank you for filling out this survey. If there's anything you'd like to "
+"change, click on \"Edit\" below."
 msgstr ""
+"Merci d'avoir rempli ce sondage. Si vous souhaitez apporter des "
+"modifications, cliquez sur \"Modifier\" ci-dessous."
 
 msgid "No surveys defined yet."
 msgstr "Aucun sondage n'est encore défini."
