--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-09-30 10:12+0200\n"
+"POT-Creation-Date: 2024-09-30 10:16+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -4572,9 +4572,11 @@ msgid "Fields"
 msgstr "Campi"
 
 msgid ""
-"Thank you for filling out this survey.<dynamic element> If there's anything "
-"you'd like to change, click on the \"Edit\"-Button below."
+"Thank you for filling out this survey. If there's anything you'd like to "
+"change, click on \"Edit\" below."
 msgstr ""
+"Grazie per aver compilato questo sondaggio. Se c'è qualcosa che desideri "
+"cambiare, fai clic su \"Modifica\" qui sotto."
 
 msgid "No surveys defined yet."
 msgstr "Ancora nessun sondaggio definito."
