--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-09-16 11:16+0200\n"
+"POT-Creation-Date: 2024-10-01 14:57+0200\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -357,11 +357,8 @@ msgstr "Plus d'informations"
 msgid "More"
 msgstr "Plus"
 
-msgid "Propose entry"
-msgstr "Proposer une entrée"
-
-msgid "Something missing? Propose a new entry."
-msgstr "Il manque quelque chose? Proposez une nouvelle entrée."
+msgid "Publication"
+msgstr "Publication"
 
 msgid "Documents"
 msgstr "Documents"
@@ -372,6 +369,9 @@ msgstr "Actions"
 msgid "Get notifications on new entries"
 msgstr "Recevoir des notifications sur les nouvelles entrées"
 
+msgid "Propose a new entry"
+msgstr "Proposer une nouvelle entrée"
+
 msgid "Internal Notes"
 msgstr "Notes internes"
 
@@ -381,13 +381,8 @@ msgstr "Lien externe"
 msgid "More information"
 msgstr "Plus de renseignements"
 
-msgid "Change Request"
-msgstr "Demande de modification"
-
-msgid "Found an error? Propose a change to this entry."
-msgstr ""
-"Vous avez trouvé une erreur? Proposez une modification à apporter à cette "
-"entrée."
+msgid "Propose a change to this entry"
+msgstr "Proposer une modification pour cette entrée"
 
 msgid ""
 "Subscribers may always unsubscribe themselves through a link shown at the "
@@ -642,17 +637,20 @@ msgstr ""
 msgid "Map"
 msgstr "Carte"
 
-msgid "Links"
-msgstr "Liens"
-
-msgid "More news"
-msgstr "Plus de nouvelles"
+msgid "Other Entries"
+msgstr "Autres entrées"
 
 msgid "Previous Entry"
 msgstr "Entrée précédente"
 
 msgid "Next Entry"
 msgstr "Entrée suivante"
+
+msgid "Links"
+msgstr "Liens"
+
+msgid "More news"
+msgstr "Plus de nouvelles"
 
 msgid "Total Amount"
 msgstr "Montant total"
@@ -942,9 +940,6 @@ msgstr "Sera publié jusqu'au:"
 
 msgid "Publication end date:"
 msgstr "Date de fin de publication:"
-
-msgid "Publication"
-msgstr "Publication"
 
 msgid "Not a publication"
 msgstr "Pas une publication"
@@ -2181,6 +2176,20 @@ msgstr ""
 
 msgid "New Note"
 msgstr "Nouveau commentaire"
+
+#~ msgid "Change Request"
+#~ msgstr "Demande de modification"
+
+#~ msgid "Found an error? Propose a change to this entry."
+#~ msgstr ""
+#~ "Vous avez trouvé une erreur? Proposez une modification à apporter à cette "
+#~ "entrée."
+
+#~ msgid "Propose entry"
+#~ msgstr "Proposer une entrée"
+
+#~ msgid "Something missing? Propose a new entry."
+#~ msgstr "Il manque quelque chose? Proposez une nouvelle entrée."
 
 #~ msgid "Newsletter Subscription"
 #~ msgstr "Abonnement à la newsletter "
