--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-09-16 11:07+0200\n"
+"POT-Creation-Date: 2024-10-01 16:49+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -4847,6 +4847,15 @@ msgid ""
 msgstr ""
 "Le regole assicurano che le allocazioni tra inizio/fine esistano e che siano "
 "estese oltre tali date agli intervalli indicati. "
+
+msgid "Rule not found"
+msgstr "Regola non trovata"
+
+msgid "Rule updated"
+msgstr "Regola aggiornata"
+
+msgid "Edit Rule"
+msgstr "Modifica regola"
 
 msgid "The rule was stopped"
 msgstr "La regola è stata arrestata"
