Newsletter: Move update subscription from edit bar to a link
TYPE: Feature
LINK: None

--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -1556,6 +1556,14 @@ msgstr ""
 "La newsletter est désactivée. Vous ne pouvez voir cette page que parce que "
 "vous êtes connecté."
 
+msgid "Sign up to our newsletter to always stay up to date:"
+msgstr ""
+"Abonnez-vous à notre lettre d'informations pour rester au courant en "
+"permanence:"
+
+msgid "To update your subscription, please use this ${Link}"
+msgstr "Pour mettre à jour votre abonnement, veuillez utiliser ce ${Link}"
+
 msgid "There are currently ${count} recipients registered."
 msgstr "Il y a actuellement ${count} destinataires enregistrés."
 
