Town6: Add Upload Button to Dropzone
TYPE: Feature
LINK: OGC-1848

--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -590,6 +590,9 @@ msgstr "mehr"
 msgid "Submit"
 msgstr "Absenden"
 
+msgid "Select files"
+msgstr "Dateien auswählen"
+
 msgid "Drop files to upload"
 msgstr "Dateien hierhin ziehen um sie hochzuladen"
 
