--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -589,6 +589,9 @@ msgstr "più"
 msgid "Submit"
 msgstr "Invia"
 
+msgid "Select files"
+msgstr "Seleziona i file"
+
 msgid "Drop files to upload"
 msgstr "Trascina e rilascia il file da caricare"
 
